<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degraded_offline"
        android:rotation="0">
    </FrameLayout>
    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/join"
        android:layout_marginBottom="15dp"
        android:src="@mipmap/ic_launcher_foreground"
        />

    <LinearLayout
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/terms"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/statejoin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:padding="5dp"
            >
            <ImageView
                android:id="@+id/statejoin"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/user_fill"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                />
            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/nombreUser"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:background="@drawable/back_edit_text"
                android:textAlignment="center"
                android:hint="@string/userrequest"
                android:layout_alignLeft="@+id/statejoin"
                android:inputType="text"
                android:elevation="10dp"
                android:fontFamily="casual"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:padding="5dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_pass"
                android:layout_gravity="center"
                android:padding="4dp"
                android:layout_margin="8dp"
                />
            <EditText
                android:id="@+id/contraUser"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:inputType="textPassword"
                android:background="@drawable/back_edit_text"
                android:imeOptions="actionDone"
                android:hint="@string/pass"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:elevation="10dp"
                android:fontFamily="casual"
                />
        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/iniciar"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:background="@drawable/button_state"
            android:elevation="10dp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textSize="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:gravity="center"
        android:autoLink="phone"
        android:linksClickable="true"
        android:text="@string/TermsConditions"
        android:textColor="@color/white"
        android:textSize="13dp"
        />


</RelativeLayout>